# mcs.nn_tilde_bending_MaxMSP

./: .gitignore  README.md
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.cpp  backend.h
src/frontend/maxmsp/mcs.nn_tilde/: CMakeLists.txt  mcs.nn_tilde.cpp
